# xml-safe-mod

./: .gitignore  README.md  pyproject.toml  xml-safe-mod  xmlsafemod.py
.github/workflows/: tests.yml
tests/: test_xmlsafemod.py
tests/golden/: creds.json  golden.sh  insert.in.xml  insert.out.xml  nesting.in.xml  nesting.out.xml  no-change.in.xml  no-change.out.xml
